# precomputed-context-core

./: Cargo.toml  GEMINI.md  README.md  SLICE15_NOTES.md  SLICE16_NOTES.md  SLICE17_NOTES.md  SLICE_18_README.md  SLICE_18_WIRING.md  SLICE_19_README.md  SLICE_19_WIRING.md  SLICE_20_README.md  SLICE_20_WIRING.md  SLICE_21_README.md  SLICE_21_WIRING.md  SLICE_22_README.md  SLICE_22_WIRING.md  SLICE_23_README.md  SLICE_23_WIRING.md  SLICE_24_README.md  SLICE_24_WIRING.md  SLICE_25_README.md  SLICE_25_WIRING.md  SLICE_26_README.md  SLICE_26_WIRING.md  SLICE_27_README.md  SLICE_27_WIRING.md  SLICE_28_README.md  SLICE_28_WIRING.md  SLICE_29_README.md  SLICE_29_WIRING.md  SLICE_30_README.md  SLICE_30_WIRING.md  SLICE_31_README.md  SLICE_31_WIRING.md  SLICE_32_README.md  SLICE_32_WIRING.md  SLICE_33_README.md  SLICE_33_WIRING.md  SLICE_34_README.md  SLICE_34_WIRING.md  (+5 more)
Plans/: canvas_01_master_plan_v_1.md  canvas_02_authority_resolution_and_repo_archetype_plan_v_1.md  canvas_03_lifecycle_state_algebra_and_ownership_plan_v_1.md  canvas_04_event_model_and_invalidation_control_plan_v_1.md  canvas_05_artifact_and_packet_contract_plan_v_1.md  canvas_06_threat_model_and_governance_control_plan_v_1.md  canvas_07_testing_and_verification_plan_v_1.md  canvas_08_forgecommand_trust_surface_plan_v_1.md  canvas_09_implementation_roadmap_v_1.md  canvas_10_immediate_next_actions_v_1.md
doc/: PCCSYSTEM.md
schemas/: authority_resolution_record.schema.json  context_assembly_request.schema.json  context_bundle_manifest.schema.json  event_record.schema.json  key_file_packet_contract.schema.json  (+5 more)
(+139 files in other folders)
