[package]
name = "precomputed-context-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "precomputed_context_core"
path = "src/lib.rs"

[features]
default = []
test-support = []

[dependencies]
jsonschema = "0.18"
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11.0"
